; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_utils.c_gl_check_error.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_utils.c_gl_check_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 (...)* }
%struct.mp_log = type { i32 }

@GL_NO_ERROR = common dso_local global i64 0, align 8
@MSGL_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"%s: OpenGL error %s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_check_error(%struct.TYPE_3__* %0, %struct.mp_log* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.mp_log*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store %struct.mp_log* %1, %struct.mp_log** %5, align 8
  store i8* %2, i8** %6, align 8
  br label %8

8:                                                ; preds = %17, %3
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64 (...)*, i64 (...)** %10, align 8
  %12 = call i64 (...) %11()
  store i64 %12, i64* %7, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* @GL_NO_ERROR, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %8
  br label %24

17:                                               ; preds = %8
  %18 = load %struct.mp_log*, %struct.mp_log** %5, align 8
  %19 = load i32, i32* @MSGL_ERR, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i32 @gl_error_to_string(i64 %21)
  %23 = call i32 @mp_msg(%struct.mp_log* %18, i32 %19, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %20, i32 %22)
  br label %8

24:                                               ; preds = %16
  ret void
}

declare dso_local i32 @mp_msg(%struct.mp_log*, i32, i8*, i8*, i32) #1

declare dso_local i32 @gl_error_to_string(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
